add class for instruction highlighting

--- a/less/project/theme-extras.less
+++ b/less/project/theme-extras.less
@@ -192,3 +192,9 @@
 }
 
 }
+
+// Added to instruction when user interacts incorrectly
+// --------------------------------------------------
+.interaction-error {
+  color: @interaction-error;
+}
