add variable for interaction-error class

--- a/less/_defaults/_colors.less
+++ b/less/_defaults/_colors.less
@@ -68,6 +68,10 @@
 @validation-error: #ff0000;
 @validation-error-inverted: @white;
 
+// Interaction - instruction highlighting
+// --------------------------------------------------
+@interaction-error: @validation-error;
+
 // Progress
 // --------------------------------------------------
 @progress: @grey;
