change class/var names, add explanatory comment

--- a/less/_defaults/_colors.less
+++ b/less/_defaults/_colors.less
@@ -70,7 +70,7 @@
 
 // Interaction - instruction highlighting
 // --------------------------------------------------
-@interaction-error: @validation-error;
+@instruction-error: @validation-error;
 
 // Progress
 // --------------------------------------------------
