--- a/less/project/theme-extras.less
+++ b/less/project/theme-extras.less
@@ -193,8 +193,10 @@
 
 }
 
-// Added to instruction when user interacts incorrectly
+// Added to mobile view Narrative and Hot Graphic instruction
+// if user navigates to another item before completing current item,
+// in case the strapline is missed
 // --------------------------------------------------
-.interaction-error {
-  color: @interaction-error;
+.instruction-error {
+  color: @instruction-error;
 }
